--- a/dashboard.html
+++ b/dashboard.html
@@ -73,6 +73,14 @@
 			padding: .5rem;
 		}
 
+		*::-webkit-scrollbar {
+			width: .25rem;
+		}
+
+		*::-webkit-scrollbar-thumb {
+			background-color: var(--list-item-fg);
+		}
+
 		.list,
 		.req,
 		.res {
