Rename dashboard title

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
-	<title>Dashboard</title>
+	<title>Capture</title>
 	<style>
 		[v-cloak] {
 			display: none !important;
